# e-commerce-manual-translation

./: .env  Cargo.toml  README.md
src/: api.rs  lib.rs  main.rs  outbound.rs  schema.rs  service.rs  shared.rs
src/api/: controller.rs  dto.rs  error.rs  mod.rs
src/api/controller/: authentication_controller.rs  category_controller.rs  category_products_controller.rs  category_subcategories_controller.rs  connect.rs  connection_helper.rs  mod.rs  pagination.rs  product_controller.rs  request_helper.rs
src/api/dto/: auth_dto.rs  category_dto.rs  mod.rs  product_dto.rs  validation_helper.rs
src/api/resource/: category_resource.rs  mod.rs  product_resource.rs  relation.rs
src/config/: env_loader.rs  mod.rs
src/dao/: category_repository.rs  connect.rs  mod.rs  product_category_repository.rs  product_repository.rs  sequence_repository.rs  user_repository.rs
src/entity/: category.rs  product.rs  product_category_relation.rs  sequence.rs  user.rs
src/errors/: WrongCredentialsError.rs  authorization_error.rs  error_enum.rs  error_enums.rs  error_response_body.rs  mod.rs  token_error.rs  wrong_credentials_error.rs
src/outbound/: adapter.rs  dao.rs
src/outbound/adapter/: currency_conversion.rs
src/outbound/dao/: category_repository.rs  product_category_repository.rs  product_repository.rs  (+2 more)
src/security/: auth_context_holder.rs  jwt_handler.rs  mod.rs  role.rs
src/service/: auth_helper.rs  category_products_service.rs  category_service.rs  category_subcategories_service.rs  currency_conversion_service.rs  mod.rs  product_category_service.rs  product_service.rs  resource_mapper.rs  security_service.rs
src/shared/: env_loader.rs
(+12 files in other folders)
