[package]
name = "e-commerce-manual-translation"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2", features = ["postgres"] }
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
once_cell = "1.21.4"
validator = { version = "0.20.0", features = ["derive"] }
