[package]
name = "e-commerce-manual-translation"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2", features = ["postgres"] }
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
once_cell = "1.21.4"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["aws-lc-rs", "rust_crypto"] }
futures-util = "0.3.32"
chrono = "0.4.44"
bcrypt = "0.19.0"
reqwest = { version = "0.13.2", features = ["json"] }
