[package]
name = "e-commerce-manual-translation"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.4"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["aws-lc-rs", "rust_crypto"] }
futures-util = "0.3.32"
chrono = "0.4.44"
bcrypt = "0.19.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde_qs = { version = "1.1.1", features = ["actix4"] }
serde_with = "3.18.0"
env_logger = "0.11.10"
log = "0.4.29"
